Ant Root Folder Structures/AntRoot - Developer/Changesets/Target/objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>APIOnly_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>APIOnly ExternalId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice_CancelFeePercent__c</fullName>
        <label>Mgmt Fee % for Cancels</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MgmtFee_Percent__c</fullName>
        <description>USCP: MgmtFee_Percent</description>
        <label>MgmtFee Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PriceRangeMax__c</fullName>
        <label>Price Range Maximum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriceRangeMin__c</fullName>
        <label>Price Range Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>Products_Added_After_5_19_2015</fullName>
        <columns>PRODUCT.NAME</columns>
        <columns>PRODUCT.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT.ACTIVE</columns>
        <columns>PRICEBOOK.ACTIVE</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PB_ENTRY.USE_STANDARD_PRICE</columns>
        <columns>PRICEBOOK.NAME</columns>
        <columns>PB_ENTRY.CREATED_DATE</columns>
        <columns>PriceRangeMin__c</columns>
        <columns>PriceRangeMax__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRICEBOOK.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PB_ENTRY.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>5/1/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>PRODUCT.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Products Added After 5/19/2015</label>
    </listViews>
</CustomObject>